--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <!-- endbuild -->
   </head>
   <body ng-app="leftOrRightApp">
@@ -47,6 +48,7 @@
       </div>
     </div>
 
+    <!-- Page content -->
     <div class="container">
       <div ng-view=""></div>
     </div>
