added counts, central image and local storage

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,9 @@
               <span ng-repeat="x in [1, 2, 3]" class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">leftOrRight</a>
+            <a class="navbar-brand" href="#/">
+              Left or Right
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -55,7 +57,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p class="text-right">chris blanks <span class="glyphicon glyphicon-pencil"></span> 23 April 2016</p>
       </div>
     </div>
 
@@ -70,6 +72,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -77,6 +80,7 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/main.js"></script>
 	<script src="scripts/controllers/about.js"></script>
+	<script src="scripts/controllers/contact.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
